# dlsynth

./: .gitignore  CMakeLists.txt  CNAME  ConfigureDeb.cmake  Doxyfile  LICENSE  README.md  _adpcm_coeffs_8hpp.html  _adpcm_coeffs_8hpp_source.html  _adpcm_format_8hpp.html  _adpcm_format_8hpp_source.html  _articulator_8cpp.html  _articulator_8hpp.html  _articulator_8hpp_source.html  _common_four_c_cs_8hpp.html  _common_four_c_cs_8hpp_source.html  _decoder_table_8cpp.html  _decoder_table_8hpp.html  _decoder_table_8hpp_source.html  _decoders_8hpp.html  _decoders_8hpp_source.html  _disable_denormals_8cpp.html  _disable_denormals_8hpp.html  _disable_denormals_8hpp_source.html  _e_g_8cpp.html  _e_g_8hpp.html  _e_g_8hpp_source.html  _error_8cpp.html  _error_8hpp.html  _error_8hpp_source.html  _expression_parser_8cpp.html  _expression_parser_8hpp.html  _expression_parser_8hpp_source.html  _float_decoder_8cpp.html  _info_8cpp.html  _info_8hpp.html  _info_8hpp_source.html  _instrument_8cpp.html  _instrument_8hpp.html  _instrument_8hpp_source.html  (+394 more)
.github/workflows/: continuous-integration.yml  docs.yml  package.yml
cmake/: dlsynth-config.cmake.in
debian/: changelog.in  control.in  copyright.in  libdlsynth-dev.install  rules
docs/: CNAME  _articulator_8cpp.html  _articulator_8hpp_source.html  _common_four_c_cs_8hpp.html  _common_four_c_cs_8hpp_source.html  _decoder_table_8hpp_source.html  _decoders_8hpp_source.html  _error_8hpp_source.html  _expression_parser_8cpp.html  _expression_parser_8hpp.html  _expression_parser_8hpp_source.html  _float_decoder_8cpp.html  _instrument_8cpp.html  _instrument_8hpp.html  _instrument_8hpp_source.html  _ms_adpcm_decoder_8cpp.html  _numeric_utils_8hpp.html  _numeric_utils_8hpp_source.html  _region_8cpp.html  _sound_8cpp.html  _sound_8hpp.html  _sound_8hpp_source.html  _uuid_8hpp.html  _uuid_8hpp_source.html  _wave_8cpp.html  _wave_8hpp_source.html  _wave_decoder_8hpp.html  _wave_decoder_8hpp_source.html  _wavesample_8cpp.html  _wavesample_8hpp.html  _wavesample_8hpp_source.html  annotated.html  class_d_l_synth_1_1_articulator-members.html  class_d_l_synth_1_1_connection_block-members.html  class_d_l_synth_1_1_connection_block.html  class_d_l_synth_1_1_decoder_table-members.html  class_d_l_synth_1_1_expression_parser-members.html  class_d_l_synth_1_1_expression_parser.html  class_d_l_synth_1_1_instrument-members.html  class_d_l_synth_1_1_instrument.html  (+79 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  enums_0.js  enums_1.js  enums_3.js  enums_5.js  enumvalues_0.js  (+53 more)
include/: dlsynth.h  dlsynth_errors.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+77 more)
src/: Articulator.cpp  Articulator.hpp  CommonFourCCs.hpp  DecoderTable.cpp  DecoderTable.hpp  Error.cpp  Error.hpp  ExpressionParser.cpp  ExpressionParser.hpp  Info.cpp  Info.hpp  Instrument.cpp  Instrument.hpp  NumericUtils.hpp  Region.cpp  Region.hpp  Sound.cpp  Sound.hpp  StructUtils.hpp  Structs.hpp  Uuid.hpp  Wave.cpp  Wave.hpp  WaveDecoder.hpp  WaveFormat.hpp  Wavesample.cpp  Wavesample.hpp  dlsynth.cpp
src/Decoders/: Decoders.hpp  FloatDecoder.cpp  LogarithmicDecoder.cpp  MsAdpcmDecoder.cpp  PcmDecoder.cpp
src/Structs/: AdpcmCoeffs.hpp  AdpcmFormat.hpp  Range.hpp  StructList.hpp  StructLoader.hpp  Uuid.hpp  WaveFormat.hpp  WaveFormatEx.hpp  art.hpp  cblock.hpp  insh.hpp  rgnh.hpp  wlnk.hpp  wsmp.hpp  wsmp_loop.hpp
src/Synth/: DisableDenormals.cpp  DisableDenormals.hpp  EG.cpp  EG.hpp  LFO.cpp  LFO.hpp  ModMatrix.cpp  ModMatrix.hpp  SPSCQueue.hpp  Synthesizer.cpp  Synthesizer.hpp  Transform.cpp  Transform.hpp  Voice.cpp  Voice.hpp  VoiceMessage.cpp  VoiceMessage.hpp
